syntax = "proto3";

package hive;

// The service definition.
service Hive {
  rpc UploadAndSign (Request) returns (Response) {}
  rpc VerifyAndShow (Request) returns (Response) {}
}

// The request message
message Request {
  string api_key = 1;
  string network = 2;
  string private_key = 3;
  string input = 4;
  bytes file_content = 5;
}

// The response message
message Response {
  string output = 1;
  string status_message = 2;
  bool status = 3;
  bytes file_content = 4;
}